# dify-rag

./: README.md  README.zh-CN.md  pyproject.toml
advanced_rag/extractor/: html_extractor.py
dify_rag/extractor/: EMR_extractor.py  constants.py  csv_extractor.py  emr_extractor.py  epub_extractor.py  excel_extractor.py  html_extractor.py  html_text.py  markdown_extractor.py  markdown_trans_extractor.py  pdf_extractor.py  utils.py  word_extractor.py
dify_rag/extractor/emr/: __init__.py  admission_record_extractor.py  base.py  constants.py  emr_helper.py  surgery_consent_extractor.py  talk_record_extractor.py
dify_rag/extractor/html/: constants.py  html_helper.py  html_table.py  html_text.py
dify_rag/extractor/html/readability/: __init__.py  cleaners.py  encoding.py  htmls.py  readability.py
dify_rag/extractor/pdf/: constants.py  pdf_helper.py  toc.py
dify_rag/extractor/unstructured/: constants.py  unstructured_epub_extractor.py
dify_rag/helper/: knowledge_api_base.py
dify_rag/models/: constants.py  document.py
dify_rag/retrieval/: __init__.py  base.py  document_retrieval.py  schemas.py  strategy.py
dify_rag/retrieval/post/: normal.py  title_structrue.py
dify_rag/splitter/: fixed_text_splitter.py  text_splitter.py
rag/extractor/: html_extractor.py  utils.py
scripts/: import_document_to_kb.py
tests/: log.py
tests/data/: sample_test.epub  《中国新生儿转运指南(2013)》解读.html  多模态摘要生成.md  大模型应用服务器配置.docx
tests/test_extractor/: test_epub_extractor.py  test_html_extractor.py  test_markdown_extractor.py  test_word_extractor.py
tests/test_retrieval/: test_retrieval_unit_test.py
