[tool.poetry]
name = "dify-rag"
version = "0.0.2"
description = "dify's rag patch module"
authors = ["libing <libing@healink.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
annotated-types = "^0.7.0"
chardet = "^5.2.0"
html-text = "^0.6.2"
readability-lxml = "^0.8.1"
pymupdf = "^1.24.9"
beautifulsoup4 = "^4.12.3"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
