[tool.poetry]
name = "dify-rag"
version = "0.0.15"
description = "dify's rag patch module"
authors = ["yichi <hustyichi@163.com>"]
readme = "README.md"
repository = "https://github.com/hustyichi/dify-rag"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.8.2"
pydantic-core = "^2.20.1"
annotated-types = "^0.7.0"
pymupdf = "^1.24.9"
beautifulsoup4 = "^4.12.2"
lxml-html-clean = "^0.2.0"
chardet = "^5.1.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
